RESOLVED FIXED144882
Web Inspector: REGRESSION (r181625): Timeline recording started from console.profile is always empty
https://bugs.webkit.org/show_bug.cgi?id=144882
Summary Web Inspector: REGRESSION (r181625): Timeline recording started from console....
Matt Baker
Reported 2015-05-11 14:35:52 PDT
* SUMMARY Timeline recording started from console.profile is always empty. The recording starts and stops (this is noticeable when profiling long-running code), but not timeline records are added. * STEPS TO REPRODUCE 1. Open the Inspector, go to Timelines 2. Start profiling from the console: console.profile("My profile") 3. Execute some JavaScript 4. Stop profiling: console.profileEnd("My profile") => console.profile causes a new recording to start, but no records are added
Attachments
[Patch] Proposed Fix (1.69 KB, patch)
2015-05-12 14:29 PDT, Matt Baker
no flags
[Patch] Proposed Fix (1.83 KB, patch)
2015-05-13 14:47 PDT, Matt Baker
no flags
Radar WebKit Bug Importer
Comment 1 2015-05-11 14:36:20 PDT
Matt Baker
Comment 2 2015-05-12 14:29:34 PDT
Created attachment 252985 [details] [Patch] Proposed Fix
Brian Burg
Comment 3 2015-05-12 14:32:15 PDT
Comment on attachment 252985 [details] [Patch] Proposed Fix r=me
WebKit Commit Bot
Comment 4 2015-05-12 16:14:28 PDT
Comment on attachment 252985 [details] [Patch] Proposed Fix Clearing flags on attachment: 252985 Committed r184224: <http://trac.webkit.org/changeset/184224>
WebKit Commit Bot
Comment 5 2015-05-12 16:14:32 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6 2015-05-12 18:24:11 PDT
Alexey Proskuryakov
Comment 7 2015-05-12 22:14:10 PDT
Rolling out.
WebKit Commit Bot
Comment 8 2015-05-12 22:15:47 PDT
Re-opened since this is blocked by bug 144946
Matt Baker
Comment 9 2015-05-13 14:47:26 PDT
Created attachment 253061 [details] [Patch] Proposed Fix
Joseph Pecoraro
Comment 10 2015-05-15 19:51:16 PDT
Comment on attachment 253061 [details] [Patch] Proposed Fix r=me
WebKit Commit Bot
Comment 11 2015-05-15 20:47:55 PDT
Comment on attachment 253061 [details] [Patch] Proposed Fix Clearing flags on attachment: 253061 Committed r184428: <http://trac.webkit.org/changeset/184428>
WebKit Commit Bot
Comment 12 2015-05-15 20:48:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.