Web Inspector: REGRESSION (r181625): Timeline recording started from console.profile is always empty https://bugs.webkit.org/show_bug.cgi?id=144882

Reviewed by Brian Burg.

A timeline recording will always be stopped before the end of the current run loop is observed. Before
dispatching the recording stopped event, the last run loop record must be completed and sent to the frontend
to prevent it from being discarded.

* inspector/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::internalStop):


Canonical link: https://commits.webkit.org/162975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184224 268f45cc-cd09-0410-ab3c-d52691b4dbfc