Source/WebCore/inspector/InspectorTimelineAgent.cpp
@@ -198,6 +198,10 @@ void InspectorTimelineAgent::internalStop()
 #if PLATFORM(COCOA)
     m_frameStartObserver = nullptr;
     m_frameStopObserver = nullptr;
+    if (m_didStartRecordingRunLoop) {
+        m_didStartRecordingRunLoop = false;
+        didCompleteCurrentRecord(TimelineRecordType::RenderingFrame);
+    }
 #endif
 
     clearRecordStack();
